tests/ui/resolve/path-attr-in-const-block.stderr
error: cannot find macro `foo` in this scope
  --> $DIR/path-attr-in-const-block.rs:6:19
   |
LL |         #![path = foo!()]
   |                   ^^^

error: attribute value must be a literal
  --> $DIR/path-attr-in-const-block.rs:6:19
   |
LL |         #![path = foo!()]
   |                   ^^^^^^

error: aborting due to 2 previous errors

